# ejemplocu02

./: CMakeLists.txt  kernel.cu  main.cpp  main.h
